Bug 303532 - Does not drop any held channels when plasmoid removed
Summary: Does not drop any held channels when plasmoid removed
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: chat-plasmoid (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR major
Target Milestone: 0.5.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-14 22:21 UTC by David Edmundson
Modified: 2012-07-26 15:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-07-14 22:21:19 UTC
-Start the chat widget
-Send yourself a message so you have a pending chat in the chat-plasmoid
-Remove the chat plasmoid

The messages, and all subsequent messages on this channel are lost.

Need to check it disconnects in destructor.
Comment 1 David Edmundson 2012-07-26 15:09:22 UTC
ConversationsModel leaks, and that keeps the ClientHandler alive when the plasmoid is deleted, which breaks *everything*.

Adding a parent to ConversationsModel should fix this.
Comment 2 David Edmundson 2012-07-26 15:28:10 UTC
> Git commit 1378619d193a3a003fcd29f1a5d399cb049ddb3f by David Edmundson.
> Committed on 26/07/2012 at 17:11.
> Pushed by davidedmundson into branch 'master'.
>
> Don't leak ConversationsModel
> Reviewed-by: George Kiagiadakis
>
> M  +2    -2    plasmoid/declarative-plugin/conversations-model.cpp
> M  +1    -1    plasmoid/declarative-plugin/conversations-model.h
> M  +1    -1    plasmoid/declarative-plugin/telepathy-text-observer.cpp
>