Don't leak ConversationsModel

BUG: 303532
Reviewed-by: George Kiagiadakis